--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
-  }
+  },
+  "engines": {
+    "node": "8.9.3",
+    "npm": "5.8.0"
+  },
+  "heroku-run-build-script": true
 }
