--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~7.3.0",
-    "@angular/compiler-cli": "~7.2.0",
     "@angular/animations": "^7.2.14",
+    "@angular/cli": "~7.3.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
@@ -23,14 +23,15 @@
     "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
+    "@auth0/angular-jwt": "^2.1.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
